# hchess

./: .gitignore  .hchess.cabal.swp  README.md  hchess.cabal  stack.yaml  temp1  temp2  testing
.stack-work/install/x86_64-linux/lts-3.14/7.10.2/flag-cache/: hashable-1.2.3.3-80550537c7909140be870afef59b4dda  primitive-0.6.1.0-842c44bae4dcc3c70cd2af42599ab93d  text-1.2.1.3-202edba6fea901191194d38d810da662
.stack-work/install/x86_64-linux/nightly-2015-11-14/7.10.2/flag-cache/: MonadRandom-0.4-717981f97c131172ca48ced0b7debe29  StateVar-1.1.0.1-d26cc6243f7eb7d8194c4fd0dccc0689  attoparsec-0.13.0.1-465de0a24d80e424544fc2f318b29ffa  base-orphans-0.4.4-61f87fbe40b70a96b4f01742198bd89e  bifunctors-5-6c077be44366dedbb8d373e4179619ed  comonad-4.2.7.2-67a4888762db31b3807c26c9373fab3f  contravariant-1.3.3-46f9639aed17b44892e1182c28100560  distributive-0.4.4-474748c5a9ad68023cbbe5ca63546d1c  exceptions-0.8.0.2-b08bd0de7dff383d124cad3f4c34eddd  free-4.12.1-3511dc3d55deef8314aec1f6d574957a  hashable-1.2.3.3-80550537c7909140be870afef59b4dda  hchess-0.1.0.0-246c0f5f3311037e1014ddf79088cf91  hchess-0.1.0.0-49ba4aadf6d11af7be88b29e4c685ab7  hchess-0.1.0.0-9ac59a0b19b93be99423b79a0525932f  hchess-0.1.0.0-b5d9f05ba101fd4b0b9f64ee63d18e1c  hchess-0.1.0.0-cc38d3e9f7b893c3a69ce939b9632520  hchess-0.1.0.0-d259bc9b2593e91831cdd638a77fa2cd  hchess-0.1.0.0-dc66aeff5a052c8e4401b8b741d8571c  hchess-0.1.0.0-ee1fcb1f188ec154f6ca561a4d01b3ac  mmorph-1.0.4-dd38bfb9311d09724528d9d040ed8e39  monad-control-1.0.0.4-9b806c409db033e571fac7650e2dbb97  mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb  nats-1.1-3ca5cbcec233c17da785d5f27705643c  prelude-extras-0.4.0.2-9cd8ab3397fab5f95aeab2ca5eb4ba56  primitive-0.6.1.0-842c44bae4dcc3c70cd2af42599ab93d  profunctors-5.1.1-6f0c50dd4e7ba9bfd2b32646c7940e3c  random-1.1-19f24a9117ee66b96a6e2cbdda5f9ba1  recursion-schemes-4.1.2-21ea83e7ac8a76d9a2de3108020e6596  scientific-0.3.4.2-4eab81f67477e4ede251473d0fb46640  semigroupoids-5.0.0.4-81985c4e68ee526ae0458a70c5542a2a  semigroups-0.16.2.2-a72c3c30152828c02aad33de447f6ff8  stm-2.4.4-2526ff89874f899372b2e4f544bb03cd  tagged-0.8.2-26b0adcd0fe1ee6463064939496bf1cc  text-1.2.1.3-202edba6fea901191194d38d810da662  transformers-base-0.4.4-47d17665c0db26ffcb68c46caa7346c1  transformers-compat-0.4.0.4-3ca5cbcec233c17da785d5f27705643c  unordered-containers-0.2.5.1-716f4718f442df81f737706b1d02ca94  vector-0.11.0.0-a3d62f13dd9bf59f0f8bbb8613e9a160  vector-th-unbox-0.2.1.3-75d194864fbacd44d7cea3ef7d9db86b  (+1 more)
app/: Main.hs
resources/: magics.json
src/: .Board.hs.swp  Arguments.hs  BitBoard.hs  Board.hs  Check.hs  FEN.hs  GameTree.hs  Index.hs  MagicGeneration.hs  MailBox.hs  Masks.hs  MoveApplication.hs  MoveGeneration.hs  MoveGeneration2.hs  MoveTables.hs  MoveTypes.hs  Naturals.hs  Serialize.hs  StrictPair.hs  Test.hs  TestingBoard.hs  Tree.hs  UI.hs  Utils.hs  oldBoard.hs  oldFEN.hs
src/.liquid/: Masks.hs.cst.html  Masks.hs.err  Masks.hs.fq  Masks.hs.html  Masks.hs.json  Masks.hs.out  Masks.hs.vim.annot
src/Move/: Application.hs  Generation.hs  Tables.hs  Types.hs
test/.liquid/: test.hs.bak  test.hs.cst.html  test.hs.err  test.hs.html  test.hs.json  test.hs.smt2  test.hs.vim.annot
(+382 files in other folders)
