name:                hchess
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hchess#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Board,GameTree,Tree,UI
  build-depends:       base >= 4.7 && < 5, vector >= 0.11.0.0, containers >= 0.5.6.2,
                       text >= 1.2.1.3, attoparsec >= 0.13.0.1, vector-th-unbox >= 0.2.1.3,
                       recursion-schemes == 4.1.2, comonad == 4.2.7.2
  default-language:    Haskell2010

executable hchess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hchess
  default-language:    Haskell2010

test-suite hchess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hchess
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hchess
