name:                hchess
version:             0.1.0.0
synopsis:            Haskell Chess Engine 
description:         Please see README.md
homepage:            http://github.com/mckeankylej/hchess#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2015 Kyle McKean
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BitBoard, FEN, Utils, Index, MoveGeneration, Masks, 
                       MoveTypes, TestingBoard, Board, MoveTables 
  build-depends:       base, attoparsec, containers, vector, vector-th-unbox,
                       ansi-wl-pprint, bool-extras
  default-extensions:  OverloadedStrings, LambdaCase, TupleSections, 
                       GeneralizedNewtypeDeriving, BangPatterns, PatternSynonyms,
                       DataKinds
  default-language:    Haskell2010

executable hchess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hchess
  default-language:    Haskell2010

test-suite hchess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hchess
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/hchess
